[package]
name = "flux"
version = "0.1.0"
authors = ["Eric Githinji <ericgithinji@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0"
geojson = "0.19.0"
geo = "0.14.2"
delaunator = "0.2.0"
num-traits = "0.2"
rand = "0.7.3"
